proxy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9090 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ['*']
                      routes:
                        - match: { prefix: '/heurist_proto.HeuristGrpc' }
                          route:
                            cluster: backend-cluster
                            max_grpc_timeout: 0s
                        - match: { prefix: '/' }
                          route:
                            cluster: frontend-cluster
                      cors:
                        allow_origin:
                          - '*'
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        max_age: '1728000'
                        expose_headers: grpc-status,grpc-message
                        enabled: true
                http_filters:
                  - name: envoy.grpc_web
                  - name: envoy.router
  clusters:
    - name: backend-cluster
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      # TODO: change the address here if changed in the docker-compose file.
      hosts: [{ socket_address: { address: backend, port_value: 9000 } }]
    - name: frontend-cluster
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      # TODO: change the address here if changed in the docker-compose file.
      hosts: [{ socket_address: { address: frontend, port_value: 80 } }]
